# alignment-without-rewards

./: .gitignore  README.md  analyze_checkpoints_sparsity.py  custom_kd_trainer.py  find_max_len.py  paper_metrics_analysis.md  plot_paper_metrics.py  pyproject.toml  rollout_group_vllm.py  start_server.sh  train_and_eval.sh
config/: opd_trainer.yaml  opsd_trainer.yaml
data/: filter.py  logiqa_test.parquet  logiqa_test_kdflow.parquet  logiqa_train.parquet  logiqa_train_kdflow.parquet  logiqa_validation.parquet  logiqa_validation_kdflow.parquet  prepare_logiqa.py  prepare_logiqa_kdflow.py
evals/: evaluate.py  run_batch_eval.sh  run_test.py  run_val.py
opd/: teacher_tunnel.py
opsd/: opsd_algorithm.py  query_teacher.py  train_opsd.py
rl/: grpo_run.py  rewards.py
scripts/: push_to_hub.py  run_opd.sh  run_opsd.sh  start_teacher.sh  subnetwork_logger.py
scripts/opsd/: opsd_algorithm.py  train_opsd.py
scripts/rl/: grpo_run.py
wandb/: latest-run
wandb/run-20260326_105307-bjc3kph0/: run-bjc3kph0.wandb
wandb/run-20260326_105554-fts0fxye/: run-fts0fxye.wandb
wandb/run-20260326_105746-wq2152ui/: run-wq2152ui.wandb
wandb/run-20260326_105942-d1wlxwtf/: run-d1wlxwtf.wandb
wandb/run-20260326_110156-micjvwvo/: run-micjvwvo.wandb
wandb/run-20260326_110611-kafn70q3/: run-kafn70q3.wandb
wandb/run-20260326_110901-odjgu6dy/: run-odjgu6dy.wandb
wandb/run-20260326_111211-deo1x0as/: run-deo1x0as.wandb
wandb/run-20260326_111808-cqvq2y7a/: run-cqvq2y7a.wandb
wandb/run-20260326_112147-qsf2dw8k/: run-qsf2dw8k.wandb
wandb/run-20260326_112550-u33yms3k/: run-u33yms3k.wandb
wandb/run-20260326_112802-r5w7j0eh/: run-r5w7j0eh.wandb
wandb/run-20260326_113159-0855cbrn/: run-0855cbrn.wandb
wandb/run-20260326_114441-byis61mp/: run-byis61mp.wandb
wandb/run-20260326_122726-g43ijxpt/: run-g43ijxpt.wandb
wandb/run-20260326_123901-gllku82d/: run-gllku82d.wandb
wandb/run-20260326_132959-n4xe54ze/: run-n4xe54ze.wandb
wandb/run-20260326_133341-mwkydyql/: run-mwkydyql.wandb
wandb/run-20260326_133809-riz1m7w2/: run-riz1m7w2.wandb
(+209 files in other folders)
