[project]
name = "alignment-without-rewards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataset>=1.6.2",
    "datasets>=4.8.3",
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "pyngrok>=7.5.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "setuptools>=82.0.1",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
