[project]
name = "alignment-without-rewards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dataset>=1.6.2",
    "datasets==4.4.1",
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "numpy==2.2.6",
    "pyngrok>=7.5.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "setuptools>=77,<80",
    "tqdm>=4.67.3",
    # ── ROCm-pinned stack (from wheels.vllm.ai/rocm) ──────────────────────
    # If you need to upgrade, run: uv pip install <pkg> --extra-index-url <rocm_index>
    "torch==2.9.1+git8907517",
    "torchvision==0.24.1+d801a34",
    "triton==3.4.0",
    "transformers==4.57.6",
    "huggingface-hub==0.36.2",
    # ─────────────────────────────────────────────────────────────────────
    "trl>=0.29.1",
    "wandb==0.25.1",
    "torchdata>=0.11.0",
    "sglang>=0.5.2",
    "sglang-router>=0.3.2",
    "ring-flash-attn>=0.1.8",
]

[tool.uv]
# The ROCm wheel index. uv will search here for packages not on PyPI.
extra-index-url = ["https://wheels.vllm.ai/rocm/0.14.0/rocm700"]
